
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx 0.9.6.2 (rev 3705 - May 15, 2008)
====================================
* Added plugin to show image previews in the manager for Image TVs as a tribute to Brett joining the team (3709)
* [FS#863] — IE7 gives JS error on navigating away from/logging out of Manager (3705)
* [MODX-124] Added a manager role for emptying the trash/permanently purging docs (rev 3682)
* Changing TVs no longer looses the sort order  on templates to which they're assigned (see http://modxcms.com/forums/index.php/topic,16090.msg146881.html#msg146881) (3622)
* Insert CDATA Tags into Weblogin snippet code so it will validate (3622)
* [#MODX-101] Fix ability to make document Public after it has been assigned to one or more Document Groups
* Patches to Ditto 2.1 to fix sorting and change default docs displayed number from 3 to "all" (see http://modxcms.com/forums/index.php/topic,23204.msg146176.html#msg146176) (3511)
* [#MODX-50] stripAlias function converts named entities to their numeric equivalents and then further to their actual character.
* Fixed bad markup in language files (see http://modxcms.com/forums/index.php/topic,23353.0)
* [FS#997] Add database collation charset and database charset to System Info. (3403)
* Fix to prevent JS warning in FF with QuickEdit (3402)
* Fix installer to use multi-language based images (3401)
* Added Japanese translation/images to the installer (3400)
* Allow weblinks to have summary(introtext) fields (3390)
* Set the published status of duplicated documents to unpublished (3388)
* Update ajaxSearch to 1.7.0.2 and Search Highlighting plugin to 1.2.0.2 (3386,3387)
* Update Ditto/Reflect to version 2.1 (3377)
* [FS#988] Changed htmlspecialchars() on Search Highlighting plugin to strip_tags() (3359)