@@ -1,8 +1,8 @@
-<?php 
+<?php
 if(IN_MANAGER_MODE!="true") die("<b>INCLUDE_ORDERING_ERROR</b><br /><br />Please use the MODx Content Manager instead of accessing this file directly.");
 if(!$modx->hasPermission('save_document')||!$modx->hasPermission('publish_document')) {
 	$e->setError(3);
-	$e->dumpError();	
+	$e->dumpError();
 }
 
 $id = $_REQUEST['id'];
@@ -20,7 +20,7 @@ if(!$udperms->checkPermissions()) {
 	<p><?php echo $_lang['access_permission_denied']; ?></p>
 	<?php
 	include "footer.inc.php";
-	exit;	
+	exit;
 }
 
 // update the document
@@ -31,14 +31,14 @@ if(!$rs){
 	echo "An error occured while attempting to unpublish the document.";
 }
 
-// invoke OnDocUnpublished  event
-$modx->invokeEvent("OnDocUnpublished",array("docid"=>$id));	
+// invoke OnDocUnPublished  event
+$modx->invokeEvent("OnDocUnPublished",array("docid"=>$id));
 
 include_once "cache_sync.class.processor.php";
 $sync = new synccache();
 $sync->setCachepath("../assets/cache/");
 $sync->setReport(false);
-$sync->emptyCache(); // first empty the cache		
+$sync->emptyCache(); // first empty the cache
 
 $header="Location: index.php?r=1&id=$id&a=7";
 header($header);
