@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx 0.9.6.2 (rev 3705 - May 15, 2008)
 ====================================
+* [FS#1064] Fix event name for OnDocUnpublished (3718)
 * Added plugin to show image previews in the manager for Image TVs as a tribute to Brett joining the team (3709)
 * [FS#863] — IE7 gives JS error on navigating away from/logging out of Manager (3705)
 * [MODX-124] Added a manager role for emptying the trash/permanently purging docs (rev 3682)
